fixed heroku server html

--- a/client/index.html
+++ b/client/index.html
@@ -18,8 +18,8 @@
                 <ul>3) If it does not contain a date or Unix timestamp, it returns null for those properties.</ul>
             </blockquote>
             <h3>Example usage:</h3>
-            <code>https://timestamp-fc.herokuapp.com/api/unixtime/December%2015,%202015</code><br>
-            <code>https://timestamp-fc.herokuapp.com/api/unixtime/1450137600</code>
+            <code>https://basejump-vg.herokuapp.com/api/unixtime/December%2015,%202015</code><br>
+            <code>https://basejump-vg.herokuapp.com/api/unixtime/1450137600</code>
             <h3>Example output:</h3>
             <code>
                 {
@@ -35,7 +35,7 @@
                 <ul>1)  I can get the IP address, language and operating system for my browser.</ul>
             </blockquote>
             <h3>Example usage:</h3>
-            <code>https://timestamp-fc.herokuapp.com/api/whoami</code><br>
+            <code>https://basejump-vg.herokuapp.com/api/whoami</code><br>
             <h3>Example output:</h3>
             <code>
                 {
